Add remote job search endpoint
